Add database initialization to Render build process
- Include 'npm run db:init' in build command to initialize database schema
- Ensures database tables are created before API starts
- Fixes potential database connection issues on deployment

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: hr-api
     runtime: node
     plan: starter
-    buildCommand: cd api && npm install
+    buildCommand: cd api && npm install && npm run db:init
     startCommand: cd api && npm start
     envVars:
       - key: NODE_ENV
