Fix API URL to use correct Render deployment URL
- Update frontend API config to use https://hr-api-wbzs.onrender.com
- Update render.yaml environment variable to match actual API URL
- Resolves 404 errors when frontend tries to connect to API

--- a/render.yaml
+++ b/render.yaml
@@ -26,7 +26,7 @@ services:
         destination: /index.html
     envVars:
       - key: VITE_API_URL
-        value: https://hr-api.onrender.com
+        value: https://hr-api-wbzs.onrender.com
 
 databases:
   - name: hr-database
