Fix render.yaml configuration and add debug logging
- Change frontend service type from 'web' to 'static'
- Add debug logging to see environment variable values
- Ensure proper static site deployment configuration

--- a/render.yaml
+++ b/render.yaml
@@ -15,9 +15,8 @@ services:
           name: hr-database
           property: connectionString
 
-  - type: web
+  - type: static
     name: hr-web
-    runtime: static
     buildCommand: cd web && npm install && npm run build
     staticPublishPath: web/dist
     routes:
