Add missing database tables schema for recruiting, benefits, and bonuses
- Created comprehensive schema for job_postings, candidates, interviews
- Added benefits_plans, insurance_plans, retirement_plans tables
- Added bonuses, commissions, bonus_structures, commission_structures tables
- Includes sample data and proper indexing
- Organized project structure with tests/, scripts/, docs/, config/ folders

--- a/config/docker-compose.dev.yml
+++ b/config/docker-compose.dev.yml
@@ -38,7 +38,7 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: config/Dockerfile
     container_name: hr-api
     environment:
       NODE_ENV: development
