Move maintenance scripts out of codebase
Moved all one-time utility/migration scripts from scripts/ to
maintenance-scripts/ folder and added to .gitignore.

These are not part of the production codebase:
- Database migration scripts
- Employee linking scripts
- Data cleanup utilities
- One-time fix scripts

They're kept locally for reference but shouldn't be in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,6 @@ Thumbs.db
 build/
 dist/
 *.xlsx
+
+# Maintenance/utility scripts (one-time migrations, not production code)
+maintenance-scripts/
