--- a/web/package.json
+++ b/web/package.json
@@ -15,9 +15,12 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "11.2.10",
+    "i18next": "^25.6.2",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-i18next": "^16.3.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
