--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "jsdom": "^23.0.1",
     "morgan": "1.10.0",
     "multer": "^2.0.0",
+    "nodemailer": "^6.9.0",
     "pg": "^8.11.5",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
