--- a/web/package.json
+++ b/web/package.json
@@ -15,10 +15,12 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "11.2.10",
     "i18next": "^25.6.2",
     "react": "18.3.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "18.3.1",
     "react-i18next": "^16.3.3"
   },
